--- a/arch/arm/configs/lightning_bacon_defconfig
+++ b/arch/arm/configs/lightning_bacon_defconfig
@@ -60,6 +60,17 @@ CONFIG_MSM_RUN_QUEUE_STATS_BE_CONSERVATIVE=y
 CONFIG_THUNDERPLUG_CONTROL=y
 # CONFIG_ATAGS_PROC is not set
 CONFIG_KEXEC_HARDBOOT=y
+# CPUQUIET Framework
+#
+CONFIG_CPUQUIET_FRAMEWORK=y
+# CONFIG_CPUQUIET_DEFAULT_GOV_BALANCED is not set
+# CONFIG_CPUQUIET_DEFAULT_GOV_RUNNABLE is not set
+# CONFIG_CPUQUIET_DEFAULT_GOV_RQ_STATS is not set
+CONFIG_CPUQUIET_DEFAULT_GOV_LOAD_STATS=y
+# CONFIG_CPUQUIET_GOVERNOR_BALANCED is not set
+CONFIG_CPUQUIET_GOVERNOR_RUNNABLE=y
+CONFIG_CPUQUIET_GOVERNOR_RQ_STATS=y
+CONFIG_CPUQUIET_GOVERNOR_LOAD_STATS=y
 
 
 #
