--- a/arch/arm/configs/lightning_bacon_defconfig
+++ b/arch/arm/configs/lightning_bacon_defconfig
@@ -3420,7 +3420,7 @@ CONFIG_FRAME_WARN=1568
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_DEBUG_KERNEL=y
