disable intelimm and slim governor
for hogging idle cpu by 5% each thanks @lord boeffla

--- a/arch/arm/configs/lightning_bacon_defconfig
+++ b/arch/arm/configs/lightning_bacon_defconfig
@@ -785,7 +785,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
-CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+# CONFIG_CPU_FREQ_GOV_INTELLIMM is not set
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
@@ -794,7 +794,7 @@ CONFIG_CPU_FREQ_GOV_DARKNESS=y
 # CONFIG_CPU_FREQ_GOV_LULZACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO is not set
 CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_SLIM=y
+# CONFIG_CPU_FREQ_GOV_SLIM is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND_EPS=y
 CONFIG_CPU_FREQ_GOV_PRESERVATIVE=y
 
